=== RubyOSA 0.1.0 ===

2006-10-25  Sebastian Delmont  <sd@notso.net>

	* src/lib/rbosa.rb:
	Made the OSA <-> Ruby conversion hooks open.
	Patch was slightly modified by Laurent Sansonetti.

2006-10-25  Aaron Patterson  <aaron.patterson@gmail.com>

	* src/lib/rbosa.rb:
	Fall-back using REXML if libxml-ruby is not present.
	Patch was slightly modified by Laurent Sansonetti.

2006-10-25  Laurent Sansonetti  <lsansonetti@apple.com>

	* AUTHORS:
	Added Aaron.

	* rubyosa.gemspec,
	  bin/rdoc-osa,
	  rdoc-osa.rb:
	- Added RubyGems specification file ;
	- Moved the rdoc-osa tool to ./bin ;
	- Added support for 'type class' OSA parameters.

	* sample/TextEdit_hello_world.rb:
	Added new sample.

	* README:
	Revised.

	* src/rbosa.c:
	Do not inspect descriptors.

	* src/lib/rbosa.rb,
	  rdoc-osa.rb:
	- Retrieves documentation from the sdef ;
	- Added a new tool (rdoc-osa) that generates RDoc documentation for the
	  given application ;
	- Improved constant/method names generation.

	* sample/iTunes_control.rb:
	Follow new constant naming.

	* TODO:
	Revised.

2006-10-16  Laurent Sansonetti  <lsansonetti@apple.com>

	* src/lib/rbosa.rb,
	  sample/*.rb:
	Added OSA.app as a convenience shortcut to OSA.app_with_name.
	Updated samples.

	* src/lib/rbosa.rb,
	  src/rbosa.c,
	  src/rbosa.h:
	- Added OSA accessors to control the Apple Event timeouts
	  and the lazy send mechanism (by default activated) ;
	- Added a convenience method (OSA.set_params) to set params
	  within the framework of a given closure.

2006-10-13  Laurent Sansonetti  <lsansonetti@apple.com>

	* README, TODO:
	Revisions for the first public release.

2006-10-11  Sebastian Delmont  <sd@notso.net>

	* src/lib/rbosa.rb:
	Fixed a bug in the code when handling optional 
	parameters. If a parameter is optional, defines
	all other parameters as optional.

2006-09-29  Laurent Sansonetti  <lsansonetti@apple.com>

	* src/lib/rbosa.rb, src/rbosa.c:
	Added support for list of types parameters.
