@@ -1,3 +1,8 @@
+2006-10-27  Laurent Sansonetti  <lsansonetti@apple.com>
+
+	* sample/iChat_uptime.rb:
+	Better uptime string. Suggested by Tieg Zaharia.
+
 === RubyOSA 0.1.0 ===
 
 2006-10-25  Sebastian Delmont  <sd@notso.net>
